objects/OrgGroup__c.object
<CustomObject>
    <fields>
        <fullName>Business__c</fullName>
        <description>Used to define the Business Name and link Sales Area to this record.</description>
        <label>Business</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel_Code__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division_Code__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org_Code__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org. Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combines the Sales Org Code + Distribution Channel Code + Division Code to identify a unique record.</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Organizational Group</label>
    <nameField>
        <displayFormat>OG-{0000000000}</displayFormat>
        <label>Org Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizational Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>